--- a/ui/wordify-views/examples/round.html
+++ b/ui/wordify-views/examples/round.html
@@ -22,6 +22,34 @@
     console.log('Wordify loaded:', Object.keys(Wordify));
   </script>
   <script>
+    // Tile values for English locale
+    const tileValues = {
+      A: 1, B: 3, C: 3, D: 2, E: 1, F: 4, G: 2, H: 4, I: 1, J: 8,
+      K: 5, L: 1, M: 3, N: 1, O: 1, P: 3, Q: 10, R: 1, S: 1, T: 1,
+      U: 1, V: 4, W: 4, X: 8, Y: 4, Z: 10
+    };
+
+    // Helper to place tiles on a board string
+    // Position is { x: 1-15 (column), y: 1-15 (row) }
+    function placeTiles(tiles) {
+      const board = new Array(225).fill('');
+      for (const { x, y, letter } of tiles) {
+        // Convert to index: column-major order
+        const index = (x - 1) * 15 + (y - 1);
+        board[index] = letter;
+      }
+      return board.join(',');
+    }
+
+    // Word "HELLO" at row 8, starting at column 6
+    const boardString = placeTiles([
+      { x: 6, y: 8, letter: 'H' },
+      { x: 7, y: 8, letter: 'E' },
+      { x: 8, y: 8, letter: 'L' },
+      { x: 9, y: 8, letter: 'L' },
+      { x: 10, y: 8, letter: 'O' }
+    ]);
+
     // Create the initial game state using the new initialization format
     const initialState = {
       myPlayerNumber: 0,
@@ -63,16 +91,10 @@
       ],
       // Use the standard board layout exported by the library
       boardLayout: Wordify.BOARD_LAYOUT,
-      // Sparse array of tiles already placed on the board (positions are 1-based)
-      // Word "HELLO" at row 8, starting at column 6
-      placedTiles: [
-        { position: { x: 6, y: 8 }, tile: { type: 'letter', letter: 'H', value: 4 } },
-        { position: { x: 7, y: 8 }, tile: { type: 'letter', letter: 'E', value: 1 } },
-        { position: { x: 8, y: 8 }, tile: { type: 'letter', letter: 'L', value: 1 } },
-        { position: { x: 9, y: 8 }, tile: { type: 'letter', letter: 'L', value: 1 } },
-        { position: { x: 10, y: 8 }, tile: { type: 'letter', letter: 'O', value: 1 } }
-      ],
-      gameEnded: false
+      // Board string: comma-delimited, column-major order
+      boardString: boardString,
+      gameEnded: false,
+      tileValues: tileValues
     };
 
     // Mount the Wordify game using the options object format
