--- a/ui/wordify-views/examples/game-lobby.html
+++ b/ui/wordify-views/examples/game-lobby.html
@@ -32,6 +32,8 @@
       playerCount: 3,
       // Players who have already joined the lobby
       joinedPlayers: ['Alice'],
+      // Players who have been invited but haven't joined yet
+      invitedPlayers: ['Bob', 'Charlie'],
       // The language the game will be played in
       language: 'English (US)',
       // Controls whether Login or Logout is shown in navigation
